hdone/objects/AuditReportBonus__mdt.object
<CustomObject>
    <description>Computes bonuses for Audit Reports</description>
    <fields>
        <fullName>Bonus_Level__c</fullName>
        <description>Bonus Level</description>
        <inlineHelpText>Bonus Level</inlineHelpText>
        <label>Bonus Level</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record is active</description>
        <inlineHelpText>Indicates if record is active</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason or description for bonus</description>
        <inlineHelpText>Reason or description for bonus</inlineHelpText>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AuditReportBonus</label>
    <pluralLabel>AuditReportBonuses</pluralLabel>
</CustomObject>